--- a/back/package.json
+++ b/back/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "ts-node-dev index.ts"
   },
   "author": "Oleksii",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "https": "^1.0.0",
     "nodemon": "^2.0.22",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.3",
     "xml-js": "^1.6.11"
   }
 }
