--- a/back/package.json
+++ b/back/package.json
@@ -9,14 +9,20 @@
   "author": "Oleksii",
   "license": "ISC",
   "dependencies": {
+    "@atrex/common": "^1.0.15",
     "@types/express": "^4.17.17",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "https": "^1.0.0",
     "nodemon": "^2.0.22",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3",
     "xml-js": "^1.6.11"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13"
   }
 }
