--- a/back/package.json
+++ b/back/package.json
@@ -20,9 +20,9 @@
     "nodemon": "^2.0.22",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "@types/cors": "^2.8.13"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13"
   }
 }
